fix firefox policies

--- a/manifests/manifest.firefox.json
+++ b/manifests/manifest.firefox.json
@@ -25,5 +25,15 @@
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "@tab-time-tracker",
+      "data_collection_permissions": {
+        "required": [
+          "browsingActivity"
+        ]
+      }
+    }
   }
 }
